# dataformer-app

./: .dockerignore  .env.example  .gitignore  =1.0.0  CONTRIBUTING.md  Dockerfile  GCP_DEPLOYMENT.md  Makefile  README.md  base.Dockerfile  build_and_push.Dockerfile  build_and_push_base.Dockerfile  container-cmd-cdk.sh  dev.Dockerfile  docker-compose.debug.yml  docker-compose.yml  package-lock.json  package.json  pyproject.toml  render.yaml
src/backend/base/: pyproject.toml
src/backend/base/dfapp/: __main__.py  alembic.ini  config.yaml  custom.py  dfapp.db-shm  dfapp.db-wal  load.py  main.py  memory.py  server.py  settings.py  worker.py
src/backend/base/dfapp/alembic/: env.py  script.py.mako
src/backend/base/dfapp/api/: __init__.py  router.py  utils.py
src/backend/base/dfapp/api/v1/: __init__.py  api_key.py  base.py  callback.py  chat.py  endpoints.py  files.py  flows.py  folders.py  login.py  monitor.py  schemas.py  store.py  users.py  validate.py  variable.py
src/backend/base/dfapp/base/: constants.py
src/backend/base/dfapp/base/agents/: agent.py  utils.py
src/backend/base/dfapp/base/data/: utils.py
src/backend/base/dfapp/base/flow_processing/: utils.py
src/backend/base/dfapp/base/io/: chat.py  text.py
src/backend/base/dfapp/base/memory/: memory.py
src/backend/base/dfapp/base/models/: finetuningmodel.py  model.py
src/backend/base/dfapp/base/prompts/: api_utils.py  utils.py
src/backend/base/dfapp/base/tools/: base.py  flow_tool.py
src/backend/base/dfapp/base/vectorstores/: utils.py
src/backend/base/dfapp/components/agents/: AgentInitializer.py  CSVAgent.py  JsonAgent.py  OpenAIConversationalAgent.py  SQLAgent.py  ToolCallingAgent.py  VectorStoreAgent.py  VectorStoreRouterAgent.py  XMLAgent.py
src/backend/base/dfapp/components/chains/: ConversationChain.py  LLMChain.py  LLMCheckerChain.py  LLMMathChain.py  RetrievalQA.py  RetrievalQAWithSourcesChain.py  (+1 more)
src/backend/base/dfapp/core/: celery_app.py  celeryconfig.py
src/backend/base/dfapp/custom/: __init__.py  eval.py  utils.py
src/backend/base/dfapp/field_typing/: __init__.py  constants.py  prompt.py
src/backend/base/dfapp/graph/: __init__.py  schema.py  utils.py
src/backend/base/dfapp/helpers/: flow.py  folders.py  record.py
src/backend/base/dfapp/initial_setup/: setup.py
src/backend/base/dfapp/interface/: base.py  custom_lists.py  listing.py  types.py  utils.py
src/backend/base/dfapp/legacy_custom/: customs.py
src/backend/base/dfapp/load/: load.py  utils.py
src/backend/base/dfapp/processing/: base.py  load.py  process.py
src/backend/base/dfapp/schema/: graph.py  image.py  message.py
src/backend/base/dfapp/services/: deps.py  factory.py  manager.py  utils.py
src/backend/base/dfapp/utils/: logger.py  schemas.py  util.py  validate.py
src/backend/base/dfapp/version/: version.py
(+400 files in other folders)
